--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -25,4 +25,4 @@ html
             strong(id="alertForEmptyName") #{notice}
             h2 ver 0.9
             h3 Update Log:
-            h4 Add Guide and About
+            h4 Add Guide and About Page
